src/PhiFEM/jitfailure-dolfin_expression_83a45dc733bb8f8ca77e36556021b08b/error.log
/tmp/tmpz80ohs2i/dolfin_expression_83a45dc733bb8f8ca77e36556021b08b.cpp: In member function ‘virtual void dolfin::dolfin_expression_83a45dc733bb8f8ca77e36556021b08b::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpz80ohs2i/dolfin_expression_83a45dc733bb8f8ca77e36556021b08b.cpp:74:28: error: ‘rexp’ was not declared in this scope
 -2.25*(-0.2*Dexprivativexp(rexp(x[0]), x[0])*Dexprivativexp(rexp(x[1]), x[1]) - 0.2*Dexprivativexp(im(x[0]), x[0])*Dexprivativexp(im(x[1]), x[1]) + 0.2)*cos(x[0]) + 2.25*(pow(0.1*x[0] + 1.0*x[1], 2) + pow(fabs(0.1*x[0] - 1.0*x[1]), 2) - 4.0)*exp(x[1])*sin(x[0]) - 6.5*(0.02*x[0] + 0.2*x[1] + 0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0]))*exp(x[1])*cos(x[0]) - 2.0*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*exp(x[1])*sin(x[0]) + 2.25*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*sin(x[0]) - 3.25*(0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0], x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0], x[0]) + 0.02*pow(Dexprivativexp(rexp(x[0]), x[0]), 2) + 0.02*pow(Dexprivativexp(im(x[0]), x[0]), 2) + 0.02)*exp(x[1])*sin(x[0]) - 1.0*(-2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1], x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1], x[1]) + 2.0*pow(Dexprivativexp(rexp(x[1]), x[1]), 2) + 2.0*pow(Dexprivativexp(im(x[1]), x[1]), 2) + 2.0)*exp(x[1])*sin(x[0]);
                            ^~~~
/tmp/tmpz80ohs2i/dolfin_expression_83a45dc733bb8f8ca77e36556021b08b.cpp:74:28: note: suggested alternative: ‘frexp’
 -2.25*(-0.2*Dexprivativexp(rexp(x[0]), x[0])*Dexprivativexp(rexp(x[1]), x[1]) - 0.2*Dexprivativexp(im(x[0]), x[0])*Dexprivativexp(im(x[1]), x[1]) + 0.2)*cos(x[0]) + 2.25*(pow(0.1*x[0] + 1.0*x[1], 2) + pow(fabs(0.1*x[0] - 1.0*x[1]), 2) - 4.0)*exp(x[1])*sin(x[0]) - 6.5*(0.02*x[0] + 0.2*x[1] + 0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0]))*exp(x[1])*cos(x[0]) - 2.0*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*exp(x[1])*sin(x[0]) + 2.25*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*sin(x[0]) - 3.25*(0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0], x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0], x[0]) + 0.02*pow(Dexprivativexp(rexp(x[0]), x[0]), 2) + 0.02*pow(Dexprivativexp(im(x[0]), x[0]), 2) + 0.02)*exp(x[1])*sin(x[0]) - 1.0*(-2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1], x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1], x[1]) + 2.0*pow(Dexprivativexp(rexp(x[1]), x[1]), 2) + 2.0*pow(Dexprivativexp(im(x[1]), x[1]), 2) + 2.0)*exp(x[1])*sin(x[0]);
                            ^~~~
                            frexp
/tmp/tmpz80ohs2i/dolfin_expression_83a45dc733bb8f8ca77e36556021b08b.cpp:74:13: error: ‘Dexprivativexp’ was not declared in this scope
 -2.25*(-0.2*Dexprivativexp(rexp(x[0]), x[0])*Dexprivativexp(rexp(x[1]), x[1]) - 0.2*Dexprivativexp(im(x[0]), x[0])*Dexprivativexp(im(x[1]), x[1]) + 0.2)*cos(x[0]) + 2.25*(pow(0.1*x[0] + 1.0*x[1], 2) + pow(fabs(0.1*x[0] - 1.0*x[1]), 2) - 4.0)*exp(x[1])*sin(x[0]) - 6.5*(0.02*x[0] + 0.2*x[1] + 0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0]))*exp(x[1])*cos(x[0]) - 2.0*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*exp(x[1])*sin(x[0]) + 2.25*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*sin(x[0]) - 3.25*(0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0], x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0], x[0]) + 0.02*pow(Dexprivativexp(rexp(x[0]), x[0]), 2) + 0.02*pow(Dexprivativexp(im(x[0]), x[0]), 2) + 0.02)*exp(x[1])*sin(x[0]) - 1.0*(-2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1], x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1], x[1]) + 2.0*pow(Dexprivativexp(rexp(x[1]), x[1]), 2) + 2.0*pow(Dexprivativexp(im(x[1]), x[1]), 2) + 2.0)*exp(x[1])*sin(x[0]);
             ^~~~~~~~~~~~~~
/tmp/tmpz80ohs2i/dolfin_expression_83a45dc733bb8f8ca77e36556021b08b.cpp:74:100: error: ‘im’ was not declared in this scope
 -2.25*(-0.2*Dexprivativexp(rexp(x[0]), x[0])*Dexprivativexp(rexp(x[1]), x[1]) - 0.2*Dexprivativexp(im(x[0]), x[0])*Dexprivativexp(im(x[1]), x[1]) + 0.2)*cos(x[0]) + 2.25*(pow(0.1*x[0] + 1.0*x[1], 2) + pow(fabs(0.1*x[0] - 1.0*x[1]), 2) - 4.0)*exp(x[1])*sin(x[0]) - 6.5*(0.02*x[0] + 0.2*x[1] + 0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0]))*exp(x[1])*cos(x[0]) - 2.0*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*exp(x[1])*sin(x[0]) + 2.25*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*sin(x[0]) - 3.25*(0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0], x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0], x[0]) + 0.02*pow(Dexprivativexp(rexp(x[0]), x[0]), 2) + 0.02*pow(Dexprivativexp(im(x[0]), x[0]), 2) + 0.02)*exp(x[1])*sin(x[0]) - 1.0*(-2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1], x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1], x[1]) + 2.0*pow(Dexprivativexp(rexp(x[1]), x[1]), 2) + 2.0*pow(Dexprivativexp(im(x[1]), x[1]), 2) + 2.0)*exp(x[1])*sin(x[0]);
                                                                                                    ^~
/tmp/tmpz80ohs2i/dolfin_expression_83a45dc733bb8f8ca77e36556021b08b.cpp:74:100: note: suggested alternative: ‘id’
 -2.25*(-0.2*Dexprivativexp(rexp(x[0]), x[0])*Dexprivativexp(rexp(x[1]), x[1]) - 0.2*Dexprivativexp(im(x[0]), x[0])*Dexprivativexp(im(x[1]), x[1]) + 0.2)*cos(x[0]) + 2.25*(pow(0.1*x[0] + 1.0*x[1], 2) + pow(fabs(0.1*x[0] - 1.0*x[1]), 2) - 4.0)*exp(x[1])*sin(x[0]) - 6.5*(0.02*x[0] + 0.2*x[1] + 0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0]))*exp(x[1])*cos(x[0]) - 2.0*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*exp(x[1])*sin(x[0]) + 2.25*(0.2*x[0] + 2.0*x[1] - 2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1]))*sin(x[0]) - 3.25*(0.2*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[0]), x[0], x[0]) + 0.2*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[0]), x[0], x[0]) + 0.02*pow(Dexprivativexp(rexp(x[0]), x[0]), 2) + 0.02*pow(Dexprivativexp(im(x[0]), x[0]), 2) + 0.02)*exp(x[1])*sin(x[0]) - 1.0*(-2.0*(0.1*rexp(x[0]) - 1.0*rexp(x[1]))*Dexprivativexp(rexp(x[1]), x[1], x[1]) - 2.0*(0.1*im(x[0]) - 1.0*im(x[1]))*Dexprivativexp(im(x[1]), x[1], x[1]) + 2.0*pow(Dexprivativexp(rexp(x[1]), x[1]), 2) + 2.0*pow(Dexprivativexp(im(x[1]), x[1]), 2) + 2.0)*exp(x[1])*sin(x[0]);
                                                                                                    ^~
                                                                                                    id
